feat: complete deployment configurations for AWS EC2 and Vercel